force-app/main/default/objects/Revaa_Transaction_Event__e/Revaa_Transaction_Event__e.object-meta.xml
<CustomObject>
    <label>Revaa Transaction Event</label>
    <pluralLabel>Reva TransactionEvents</pluralLabel>
</CustomObject>