force-app/main/default/objects/Revaa_Transaction_Event__e/fields/Investor_Name__c.field-meta.xml
<CustomField>
    <fullName>Investor_Name__c</fullName>
    <label>Investor Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>