force-app/main/default/objects/Revaa_Transaction_Event__e/fields/Lots_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Lots_Purchased__c</fullName>
    <label>Lots Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>