force-app/main/default/objects/Revaa_Transaction_Event__e/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <label>Property Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>