force-app/main/default/objects/Revaa_Transaction_Event__e/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>